// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleCollapse Sizes Respects lg size 1`] = `
<button
  class="btn btn-lg btn-neutral "
>
  testing lg button size
</button>
`;

exports[`SimpleCollapse Sizes Respects md size 1`] = `
<button
  class="btn btn-md btn-neutral "
>
  testing md button size
</button>
`;

exports[`SimpleCollapse Sizes Respects sm size 1`] = `
<button
  class="btn btn-sm btn-neutral "
>
  testing sm button size
</button>
`;

exports[`SimpleCollapse Sizes Respects xs size 1`] = `
<button
  class="btn btn-xs btn-neutral "
>
  testing xs button size
</button>
`;

exports[`SimpleCollapse Variants Respects accent variant 1`] = `
<button
  class="btn btn-md btn-accent "
>
  testing accent variant
</button>
`;

exports[`SimpleCollapse Variants Respects error variant 1`] = `
<button
  class="btn btn-md btn-error "
>
  testing error variant
</button>
`;

exports[`SimpleCollapse Variants Respects info variant 1`] = `
<button
  class="btn btn-md btn-info "
>
  testing info variant
</button>
`;

exports[`SimpleCollapse Variants Respects neutral variant 1`] = `
<button
  class="btn btn-md btn-neutral "
>
  testing neutral variant
</button>
`;

exports[`SimpleCollapse Variants Respects primary variant 1`] = `
<button
  class="btn btn-md btn-primary "
>
  testing primary variant
</button>
`;

exports[`SimpleCollapse Variants Respects secondary variant 1`] = `
<button
  class="btn btn-md btn-secondary "
>
  testing secondary variant
</button>
`;

exports[`SimpleCollapse Variants Respects success variant 1`] = `
<button
  class="btn btn-md btn-success "
>
  testing success variant
</button>
`;

exports[`SimpleCollapse Variants Respects warning variant 1`] = `
<button
  class="btn btn-md btn-warning "
>
  testing warning variant
</button>
`;
